--- a/Integrate ADC_Comp.ioc
+++ b/Integrate ADC_Comp.ioc
@@ -36,11 +36,13 @@ Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlign
 Dma.Request0=ADC1
 Dma.RequestsNb=1
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32L476RGT3
 Mcu.Family=STM32L4
 Mcu.IP0=ADC1
 Mcu.IP1=ADC2
+Mcu.IP10=USART3
 Mcu.IP2=COMP1
 Mcu.IP3=DAC1
 Mcu.IP4=DMA
@@ -49,7 +51,7 @@ Mcu.IP6=RCC
 Mcu.IP7=SYS
 Mcu.IP8=TIM16
 Mcu.IP9=USART2
-Mcu.IPNb=10
+Mcu.IPNb=11
 Mcu.Name=STM32L476R(C-E-G)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
@@ -61,15 +63,17 @@ Mcu.Pin13=PA8
 Mcu.Pin14=PA9
 Mcu.Pin15=PA13 (JTMS-SWDIO)
 Mcu.Pin16=PA14 (JTCK-SWCLK)
-Mcu.Pin17=PB3 (JTDO-TRACESWO)
-Mcu.Pin18=PB4 (NJTRST)
-Mcu.Pin19=PB5
+Mcu.Pin17=PC10
+Mcu.Pin18=PC11
+Mcu.Pin19=PB3 (JTDO-TRACESWO)
 Mcu.Pin2=PC15-OSC32_OUT (PC15)
-Mcu.Pin20=PB6
-Mcu.Pin21=VP_COMP1_VS_VREFINT
-Mcu.Pin22=VP_DAC1_VS_DACI1
-Mcu.Pin23=VP_SYS_VS_Systick
-Mcu.Pin24=VP_TIM16_VS_ClockSourceINT
+Mcu.Pin20=PB4 (NJTRST)
+Mcu.Pin21=PB5
+Mcu.Pin22=PB6
+Mcu.Pin23=VP_COMP1_VS_VREFINT
+Mcu.Pin24=VP_DAC1_VS_DACI1
+Mcu.Pin25=VP_SYS_VS_Systick
+Mcu.Pin26=VP_TIM16_VS_ClockSourceINT
 Mcu.Pin3=PH0-OSC_IN (PH0)
 Mcu.Pin4=PH1-OSC_OUT (PH1)
 Mcu.Pin5=PA1
@@ -77,7 +81,7 @@ Mcu.Pin6=PA2
 Mcu.Pin7=PA3
 Mcu.Pin8=PA4
 Mcu.Pin9=PA5
-Mcu.PinsNb=25
+Mcu.PinsNb=27
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L476RGTx
@@ -163,6 +167,13 @@ PB6.GPIOParameters=GPIO_Label
 PB6.GPIO_Label=LCD
 PB6.Locked=true
 PB6.Signal=GPIO_Output
+PC10.Locked=true
+PC10.Mode=Half_duplex(single_wire_mode)
+PC10.Signal=USART3_TX
+PC11.GPIOParameters=GPIO_Label
+PC11.GPIO_Label=DE
+PC11.Locked=true
+PC11.Signal=GPIO_Output
 PC13.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PC13.GPIO_Label=B1 [Blue PushButton]
 PC13.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
@@ -217,7 +228,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_ADC2_Init-ADC2-false-HAL-true,7-MX_COMP1_Init-COMP1-false-HAL-true,8-MX_TIM16_Init-TIM16-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_ADC2_Init-ADC2-false-HAL-true,7-MX_COMP1_Init-COMP1-false-HAL-true,8-MX_TIM16_Init-TIM16-false-HAL-true,9-MX_DAC1_Init-DAC1-false-HAL-true
 RCC.ADCFreq_Value=64000000
 RCC.AHBFreq_Value=80000000
 RCC.APB1Freq_Value=80000000
@@ -282,6 +293,9 @@ TIM16.Period=65534-1
 TIM16.Prescaler=80-1
 USART2.IPParameters=VirtualMode-Asynchronous
 USART2.VirtualMode-Asynchronous=VM_ASYNC
+USART3.BaudRate=57600
+USART3.IPParameters=VirtualMode-Half_duplex(single_wire_mode),BaudRate
+USART3.VirtualMode-Half_duplex(single_wire_mode)=VM_ASYNC
 VP_COMP1_VS_VREFINT.Mode=VREFINT
 VP_COMP1_VS_VREFINT.Signal=COMP1_VS_VREFINT
 VP_DAC1_VS_DACI1.Mode=DAC_OUT1_Int
